Change the scene

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <body>
         <a-scene id="scene" id="scene" cursor="rayOrigin: mouse">
-            <a-entity environment="preset: egypt;dressing: pyramids"></a-entity>
+            <a-entity environment="preset: yavapai"></a-entity>
             <a-sky color="white"></a-sky>
             <a-entity bind-for="for: point; in: executionData; key: hash; updateInPlace: true">
                 <template>
